--- a/e-commerce-app/src/app/core-components/shopping-cart/card-item/card-item.component.html
+++ b/e-commerce-app/src/app/core-components/shopping-cart/card-item/card-item.component.html
@@ -1,13 +1,13 @@
-<div class="product">
+<div class="book">
 
   <div class="avatar">IMG</div>
 
   <div class="name">
-    <span>{{order.product.name}}</span>
+    <span>{{order.book.title}}</span>
   </div>
 
   <div class="price">
-    <span><strong>{{order.product.price | currency: 'USD' : true}}</strong></span>
+    <span><strong>{{order.book.price | currency: 'USD' : true}}</strong></span>
   </div>
 
   <div class="quantity">
