--- a/e-commerce-app/src/app/core-components/shopping-cart/card-item/card-item.component.scss
+++ b/e-commerce-app/src/app/core-components/shopping-cart/card-item/card-item.component.scss
@@ -1,6 +1,6 @@
 @import '../../../_helpers/variables';
 
-.product {
+.book {
   display: flex;
   align-items: center;
   border-bottom: 1px solid $border_color;
