--- a/e-commerce-app/src/app/core-components/auth-dialog/login/login.component.html
+++ b/e-commerce-app/src/app/core-components/auth-dialog/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container">
 
-  <div class="left">
+  <div class="left" fxHide.xs="true" fxHide.sm="true">
     <mat-icon>lock</mat-icon>
     <p>You can log in using your account</p>
   </div>
