--- a/e-commerce-app/src/app/core-components/auth-dialog/register/register.component.html
+++ b/e-commerce-app/src/app/core-components/auth-dialog/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="register-container">
 
-  <div class="left">
+  <div class="left" fxHide.xs="true" fxHide.sm="true">
     <mat-icon>lock</mat-icon>
     <p>You can create Your own account here. </p>
   </div>
