--- a/e-commerce-app/src/app/core-components/auth-dialog/register/register.component.scss
+++ b/e-commerce-app/src/app/core-components/auth-dialog/register/register.component.scss
@@ -1,29 +1,30 @@
 @import '../../../_helpers/variables';
 
 .register-container {
+  font-size: 75%;
   display: flex;
   align-items: center;
   flex-direction: column;
-
   padding: 30px 20px;
   @media #{$gt-md_size} {
     padding: 30px 40px;
     flex-direction: row;
+    font-size: 100%;
   }
 
-  .left{
+  .left {
     flex: 50%;
-    display: flex;
+    display: flex !important;
     flex-direction: column;
     align-items: center;
-    mat-icon{
+    mat-icon {
       font-size: 75px;
       width: 75px;
       height: 75px;
       color: $my_grey;
     }
   }
-  .right{
+  .right {
     flex: 50%;
     flex-direction: column;
     @media #{$gt-md_size} {
@@ -37,7 +38,7 @@
   }
 }
 
-.pass_error{
+.pass_error {
   margin-top: -25px;
   padding-bottom: 10px;
   font-size: 75%;
