--- a/e-commerce-app/src/app/shared-components/products-display/product-minatures-item/product-minatures-item.component.html
+++ b/e-commerce-app/src/app/shared-components/products-display/product-minatures-item/product-minatures-item.component.html
@@ -1,6 +1,6 @@
-<div class="product-container">
-  <mat-card class="example-card">
-    <div class="product-image">
+<div class="book-container">
+  <mat-card>
+    <div class="book-image">
       <img class="" mat-card-image src="https://s3.producthunt.com/static/kitty_265x244%402x.png"
            alt="Photo of a Shiba Inu">
     </div>
