--- a/e-commerce-app/src/app/shared-components/products-display/product-minatures-item/product-minatures-item.component.scss
+++ b/e-commerce-app/src/app/shared-components/products-display/product-minatures-item/product-minatures-item.component.scss
@@ -1,23 +1,21 @@
 @import '../../../_helpers/variables';
 
-.product-image {
+.book-image {
   height: 200px;
   img {
     height: 100%;
   }
 }
 
-.product-container {
+.book-container {
   padding: 10px;
-  width: calc(100% - 20px); // 100% - padding
-  @media screen and (min-width: 500px) {
-    width: 230px;
+  width: calc(100vw - 20px); // 100% - padding
+  max-width: 280px;
+  @media #{$gt-xs_size}{
+    width: 50vw;
   }
   @media #{$gt-sm_size}{
-    width: 203px;
-  }
-  @media #{$gt-md_size}{
-    width: 250px;
+    width: 30vw;
   }
 
 }
@@ -41,6 +39,7 @@
     padding-left: 10px;
   }
 }
+
 mat-card-actions {
   button {
     padding: 0;
@@ -48,11 +47,12 @@ mat-card-actions {
   }
 }
 
-.inStock{
+.inStock {
   color: $material_green;
   font-weight: 700;
 }
-.notInStock{
+
+.notInStock {
   color: $material_red;
   font-weight: 700;
 }
