--- a/e-commerce-app/src/app/shared-components/products-display/products-display.component.scss
+++ b/e-commerce-app/src/app/shared-components/products-display/products-display.component.scss
@@ -27,14 +27,13 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  @media screen and (min-width: 790px) {
+  @media #{$gt-sm_size} {
     justify-content: flex-start;
   }
 }
 
 .product-list {
   padding: 20px;
-
 }
 
 .no-books {
