Poprawiony wygląd koszyka, wstępy komponent dla poszczególnej książki (detail)

--- a/e-commerce-app/src/app/core-components/auth-dialog/register/register.component.html
+++ b/e-commerce-app/src/app/core-components/auth-dialog/register/register.component.html
@@ -2,7 +2,7 @@
 
   <div class="left" fxHide.xs="true" fxHide.sm="true">
     <mat-icon>lock</mat-icon>
-    <p>You can create Your own account here. </p>
+    <p>You can log in using your account</p>
   </div>
 
   <div class="right">
