--- a/e-commerce-app/src/app/core-components/shopping-cart/shopping-cart.component.html
+++ b/e-commerce-app/src/app/core-components/shopping-cart/shopping-cart.component.html
@@ -20,7 +20,7 @@
       <span>Total price: </span>
       <span><strong>{{_cardService.totalPrice | currency: 'USD' : true}}</strong></span>
     </div>
-    <button mat-raised-button color="primary">CHECK OUT</button>
+    <button mat-raised-button color="primary">check out</button>
   </div>
 
 </div>
