--- a/e-commerce-app/src/app/shared-components/products-display/product-minatures-item/product-minatures-item.component.html
+++ b/e-commerce-app/src/app/shared-components/products-display/product-minatures-item/product-minatures-item.component.html
@@ -30,7 +30,7 @@
         <mat-icon>add_shopping_cart</mat-icon>
         <span>Add</span>
       </button>
-      <button mat-button >
+      <button mat-button [routerLink]="['/book', book.key]">
         <mat-icon>more_horiz</mat-icon>
         <span>More</span>
       </button>
