--- a/e-commerce-app/src/app/core-components/auth-dialog/auth-dialog.component.html
+++ b/e-commerce-app/src/app/core-components/auth-dialog/auth-dialog.component.html
@@ -1,10 +1,10 @@
-<mat-tab-group>
+<mat-tab-group #myTabGroup>
   <mat-tab label="Login">
     <app-login></app-login>
   </mat-tab>
 
   <mat-tab label="Register">
-    <app-register></app-register>
+    <app-register *ngIf="myTabGroup.selectedIndex == 1"></app-register>
   </mat-tab>
 
 </mat-tab-group>
