--- a/e-commerce-app/src/app/core-components/auth-dialog/register/register.component.scss
+++ b/e-commerce-app/src/app/core-components/auth-dialog/register/register.component.scss
@@ -14,7 +14,7 @@
 
   .left {
     flex: 50%;
-    display: flex !important;
+    display: flex;
     flex-direction: column;
     align-items: center;
     mat-icon {
