--- a/e-commerce-app/src/app/shared-components/products-display/product-list-item/product-list-item.component.html
+++ b/e-commerce-app/src/app/shared-components/products-display/product-list-item/product-list-item.component.html
@@ -1,6 +1,6 @@
-<div class="product-list-content" [routerLink]="['/book', book.isbn]">
+<div class="product-list-content" [routerLink]="['/book', book.key]">
   <div class="avatar" fxHide.xs="true">IMAGE</div>
-  <div class="name">{{book.title}}</div>
+  <div class="info">{{book.title}}</div>
   <div class="desc" fxHide.xs="true">{{book.desc}}</div>
   <div class="price"><strong>{{book.price | currency: 'USD' : true}}</strong></div>
   <div class="quantity">quan. {{book.quantity}}</div>
