--- a/e-commerce-app/src/styles.scss
+++ b/e-commerce-app/src/styles.scss
@@ -70,3 +70,20 @@ html, body {
   align-items: center;
   height: calc(100vh - 150px);
 }
+
+
+.my-hr {
+  display: flex;
+  width: 100%;
+  height: 1px;
+  margin: 10px 0;
+  background: $border_color;
+}
+
+.add-remove{
+  font-size: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: 10px 10px 0 0;
+  justify-content: space-between;
+}
