--- a/e-commerce-app/src/app/core-components/shopping-cart/card-item/card-item.component.scss
+++ b/e-commerce-app/src/app/core-components/shopping-cart/card-item/card-item.component.scss
@@ -2,21 +2,23 @@
 
 .book {
   display: flex;
-  align-items: center;
+  //align-items: center;
   border-bottom: 1px solid $border_color;
   padding: 10px 0 10px 10px;
   .avatar {
-    flex: 0.25;
+    flex: 0.3;
+    &:hover {
+      cursor: pointer;
+    }
   }
   .name {
-    flex: 0.4;
+    flex: 0.55;
     padding: 0 5px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-
     .title {
       font-weight: 700;
+      padding-right: 10px;
     }
 
     .author {
@@ -24,25 +26,33 @@
       font-size: 80%;
     }
   }
-  .price {
-    flex: 0.1;
-    padding: 0 5px;
-  }
-  .quantity {
-    flex: 0.25;
-    display: flex;
-    align-items: center;
-    font-size: 120%;
-    justify-content: flex-end;
-    .quantity-product {
+  .actions {
+    flex: 0.15;
+    .price {
+      display: flex;
+      justify-content: flex-end;
       padding-right: 10px;
+    }
+    .quantity {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      input[type=number]{
+        font-size: 120%;
+        width: 40px;
+        height: 20px;
+      }
+      .quantity-input{
+        margin-top: 10px;
+        display: flex;
+        justify-content: flex-end;
+      }
     }
     mat-icon {
       cursor: pointer;
     }
-  }&:hover {
+  }
+  &:hover {
      background: $border_color;
    }
 }
-
-.test {  }
