--- a/e-commerce-app/src/app/shared-components/products-display/product-detail/product-detail.component.scss
+++ b/e-commerce-app/src/app/shared-components/products-display/product-detail/product-detail.component.scss
@@ -7,6 +7,11 @@
 .book-detail {
   display: flex;
   //justify-content: space-between;
+  flex-direction: column;
+
+  @media #{$gt-xs_size} {
+    flex-direction: row;
+  }
 
   .avatar {
     flex: 0.3;
@@ -58,7 +63,7 @@
       flex-direction: column;
       width: 100%;
       button {
-        box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+        box-shadow: 0 3px 1px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
         text-transform: uppercase;
         margin: 5px 0;
         width: 100%;
