zmiana wyswietlania książek w liście na listę angular'a (mat-table)

--- a/e-commerce-app/src/app/shared-components/products-display/product-list-item/product-list-item.component.scss
+++ b/e-commerce-app/src/app/shared-components/products-display/product-list-item/product-list-item.component.scss
@@ -1,39 +1,30 @@
 @import '../../../_helpers/variables';
 
-.product-list-content {
+.product-list-container {
+  min-width: 300px;
+  @include box_shadow;
+}
+
+.mat-table {
+  overflow: auto;
+  max-height: 500px;
+}
+
+mat-header-cell {
   display: flex;
-  align-items: center;
-  //padding: 0;
-  padding: 20px 0;
-  border-right: 1px solid $border_color;
-  border-top: 1px solid $border_color;
-  border-left: 1px solid $border_color;
+  justify-content: center;
+}
+
+mat-row {
+  transition: all .3s;
   &:hover {
     background: $border_color;
   }
 }
-.avatar {
-  flex: 0.2;
-  @media #{$lt-sm_size} {
-    flex: 0;
-  }
-}
-.info {
-  padding: 10px;
-  flex: 0.4;
-  @media #{$gt-xs_size} {
-    flex: 0.2;
-  }
-}
-.desc {
-  flex: 0.3;
-  @media #{$lt-sm_size} {
-    flex: 0;
-  }
-}
-.price, .quantity, .actions{
-  flex: 0.2;
-  @media #{$gt-xs_size} {
-    flex: 0.1;
+
+.actions{
+  @media #{$gt-md_size} {
+    display: flex;
+    justify-content: center;
   }
 }
