--- a/e-commerce-app/src/app/shared-components/products-display/product-list-item/product-list-item.component.html
+++ b/e-commerce-app/src/app/shared-components/products-display/product-list-item/product-list-item.component.html
@@ -1,13 +1,63 @@
-<div class="product-list-content" [routerLink]="['/book', book.key]">
-  <div class="avatar" fxHide.xs="true">IMAGE</div>
-  <div class="info">{{book.title}}</div>
-  <div class="desc" fxHide.xs="true">{{book.desc}}</div>
-  <div class="price"><strong>{{book.price | currency: 'USD' : true}}</strong></div>
-  <div class="quantity">quan. {{book.quantity}}</div>
-  <div class="actions">
-    <button mat-button (click)="addBookToCard()" [disabled]="book.quantity === 0">
-      <mat-icon>add_shopping_cart</mat-icon>
-      <span>Add</span>
-    </button>
-  </div>
+<div class="product-list-container">
+  <mat-table #table [dataSource]="dataSource" matSort>
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="img">
+      <mat-header-cell *matHeaderCellDef> IMG</mat-header-cell>
+      <mat-cell *matCellDef="let element"> IMG</mat-cell>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="title">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Title</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.title}}</mat-cell>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="author">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Author</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.author}}</mat-cell>
+    </ng-container>
+
+    <!-- Color Column -->
+    <ng-container matColumnDef="desc">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Desc</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.desc}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="price">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Price</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.price | currency: 'USD': true}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> Actions</mat-header-cell>
+      <mat-cell *matCellDef="let element" class="actions">
+        <button mat-button (click)="addProductToCard(element)" [disabled]="element.quantity === 0">
+          <mat-icon>add_shopping_cart</mat-icon>
+          <span fxHide.xs="true" >Add</span>
+        </button>
+        <button mat-button [routerLink]="['/book', element.key]">
+          <mat-icon>more_horiz</mat-icon>
+          <span fxHide.xs="true">More</span>
+        </button>
+
+      </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row  *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
+
+  <mat-paginator #paginator
+                 [length]="lengthOfBooks"
+                 [pageIndex]="0"
+                 [pageSize]="10"
+                 [pageSizeOptions]="[10, 25, 50, 100]">
+  </mat-paginator>
+
 </div>
+
