--- a/e-commerce-app/src/app/shared-components/products-display/products-display.component.html
+++ b/e-commerce-app/src/app/shared-components/products-display/products-display.component.html
@@ -5,7 +5,7 @@
 
 <div *ngIf="!loading">
   <div class="product-list-header">
-    <mat-form-field floatPlaceholder="never">
+    <mat-form-field floatPlaceholder="never" *ngIf="!displayList">
       <mat-select placeholder="Sort">
         <mat-option *ngFor="let sort of sortTypes" [value]="sort.value" (click)="sortBooks(sort.value)">
           {{sort.viewValue}}
@@ -17,15 +17,11 @@
     <mat-icon [ngClass]="{'active': displayList}" (click)="displayList = true">list</mat-icon>
   </div>
 
-  <!--<mat-card class="no-books" *ngIf="(_arrayBooks | SearchPipe: _searchService.queryString).length === 0">-->
-    <!--Sorry. No search results <span *ngIf="_searchService.queryString ">"{{_searchService.queryString}}"</span> :(-->
-  <!--</mat-card>-->
-
   <div class="product-miniatures" *ngIf="!displayList">
     <app-product-miniatures *ngFor="let book of _arrayBooks" [book]="book"></app-product-miniatures>
   </div>
 
   <div class="product-list text-center" *ngIf="displayList">
-    <app-product-list *ngFor="let book of _arrayBooks" [book]="book"></app-product-list>
+    <app-product-list></app-product-list>
   </div>
 </div>
