--- a/e-commerce-app/src/app/core-components/shopping-cart/card-item/card-item.component.html
+++ b/e-commerce-app/src/app/core-components/shopping-cart/card-item/card-item.component.html
@@ -1,5 +1,5 @@
 <div class="book">
-  <div class="avatar" [routerLink]="['/book', order.book.key]">IMG</div>
+  <div class="avatar" [routerLink]="['/book', order.book.key]" (click)="cardNav.close()">IMG</div>
 
   <div class="name">
       <span class="title">
