--- a/e-commerce-app/src/app/core-components/sidebar/sidebar.component.html
+++ b/e-commerce-app/src/app/core-components/sidebar/sidebar.component.html
@@ -48,7 +48,7 @@
       <span>Shopping Cart</span>
     </div>
     <div class="card-nav-content">
-      <app-shopping-cart></app-shopping-cart>
+      <app-shopping-cart [cardNav]="cardNav"></app-shopping-cart>
     </div>
   </mat-sidenav>
 
