--- a/e-commerce-app/src/app/shared-components/auth-dialog/auth-dialog.component.html
+++ b/e-commerce-app/src/app/shared-components/auth-dialog/auth-dialog.component.html
@@ -4,7 +4,7 @@
   </mat-tab>
 
   <mat-tab label="Register">
-    <app-register *ngIf="myTabGroup.selectedIndex == 1"></app-register>
+    <app-register></app-register>
   </mat-tab>
 
 </mat-tab-group>
